Implemented basic logger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,10 +63,10 @@ foreach (test_source ${TEST_SOURCES})
 endforeach(test_source  ${TEST_SOURCES})
 
 # Find integration tests
-file( GLOB_RECURSE INTEG_TEST_SOURCES tests/*.cpp )
-foreach (test_source ${INTEG_TEST_SOURCES})
-  get_filename_component( testname ${test_source} NAME_WE)
-  add_executable( ${testname} ${test_source} )
-  target_link_libraries( ${testname} cannon)
-  target_include_directories( ${testname} PUBLIC "${PROJECT_SOURCE_DIR}")
-endforeach (test_source ${INTEG_TEST_SOURCES})
+file( GLOB_RECURSE SCRIPT_SOURCES scripts/*.cpp )
+foreach (script_source ${SCRIPT_SOURCES})
+  get_filename_component( scriptname ${script_source} NAME_WE)
+  add_executable( ${scriptname} ${script_source} )
+  target_link_libraries( ${scriptname} cannon)
+  target_include_directories( ${scriptname} PUBLIC "${PROJECT_SOURCE_DIR}")
+endforeach (script_source ${SCRIPT_SOURCES})
