--- a/cannon/CMakeLists.txt
+++ b/cannon/CMakeLists.txt
@@ -1,8 +1,9 @@
 list(APPEND CANNON_SOURCES
-  fake.cpp
+  null.cpp
   )
 
 add_subdirectory(math)
+add_subdirectory(log)
 
 add_library(cannon ${CANNON_SOURCES})
-target_link_libraries(cannon math ${LIBRARIES})
+target_link_libraries(cannon math log ${LIBRARIES})
