Implemented formula truth evaluator from COMP 509 hw2

--- a/cannon/CMakeLists.txt
+++ b/cannon/CMakeLists.txt
@@ -4,6 +4,11 @@ list(APPEND CANNON_SOURCES
 
 add_subdirectory(math)
 add_subdirectory(log)
+add_subdirectory(logic)
 
 add_library(cannon ${CANNON_SOURCES})
-target_link_libraries(cannon math log ${LIBRARIES})
+target_link_libraries(cannon 
+  math 
+  log 
+  logic
+  ${LIBRARIES})
