Set things up for OpenGL work

--- a/cannon/CMakeLists.txt
+++ b/cannon/CMakeLists.txt
@@ -5,10 +5,12 @@ list(APPEND CANNON_SOURCES
 add_subdirectory(math)
 add_subdirectory(log)
 add_subdirectory(logic)
+add_subdirectory(graphics)
 
 add_library(cannon ${CANNON_SOURCES})
 target_link_libraries(cannon 
   math 
   log 
   logic
+  graphics
   ${LIBRARIES})
