Implemented basic OpenGL window creation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,15 +54,16 @@ find_package(OpenGL 3.3 REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIRS})
 list(APPEND LIBRARIES ${OPENGL_LIBRARIES})
 
+# GLAD
+add_library(GLAD "thirdparty/glad/src/glad.c")
+target_link_libraries(GLAD ${CMAKE_DL_LIBS})
+include_directories("thirdparty/glad/include")
+list(APPEND LIBRARIES GLAD)
+
 # GLFW
 find_package(GLFW3 REQUIRED)
 include_directories(${GLFW3_INCLUDE_DIR})
 list(APPEND LIBRARIES ${GLFW3_LIBRARY})
-
-# GLAD
-add_library(GLAD "thirdparty/glad/src/glad.c")
-include_directories("thirdparty/glad/include")
-list(APPEND LIBRARIES GLAD)
 
 include_directories("${PROJECT_SOURCE_DIR}")
 add_subdirectory(cannon)
@@ -72,7 +73,7 @@ file( GLOB_RECURSE TEST_SOURCES cannon/*.test.cpp )
 foreach (test_source ${TEST_SOURCES})
   get_filename_component( testname ${test_source} NAME_WE)
   add_executable( ${testname} ${test_source} )
-  target_link_libraries( ${testname} cannon)
+  target_link_libraries( ${testname} cannon ${LIBRARIES})
   set_target_properties(${testname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/unit_tests")
   add_test(${testname} "unit_tests/${testname}")
 endforeach(test_source  ${TEST_SOURCES})
@@ -82,7 +83,7 @@ file( GLOB_RECURSE SCRIPT_SOURCES scripts/*.cpp )
 foreach (script_source ${SCRIPT_SOURCES})
   get_filename_component( scriptname ${script_source} NAME_WE)
   add_executable( ${scriptname} ${script_source} )
-  target_link_libraries( ${scriptname} cannon)
+  target_link_libraries( ${scriptname} cannon ${LIBRARIES})
   target_include_directories( ${scriptname} PUBLIC "${PROJECT_SOURCE_DIR}")
   set_target_properties(${scriptname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/scripts")
 endforeach (script_source ${SCRIPT_SOURCES})
