Implemented components necessary to draw a triangle

--- a/cannon/graphics/CMakeLists.txt
+++ b/cannon/graphics/CMakeLists.txt
@@ -1,5 +1,10 @@
 list(APPEND GRAPHICS_SOURCES 
   window.cpp
+  vertex_buffer.cpp
+  vertex_shader.cpp
+  fragment_shader.cpp
+  shader_program.cpp
+  vertex_array_object.cpp
   )
 
 add_library(graphics ${GRAPHICS_SOURCES})
