--- a/cannon/CMakeLists.txt
+++ b/cannon/CMakeLists.txt
@@ -18,7 +18,15 @@ target_link_libraries(cannon
 # Copy shaders
 ADD_CUSTOM_COMMAND(
   TARGET cannon POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_directory
+  COMMAND ${CMAKE_COMMAND} -E create_symlink
     ${CMAKE_CURRENT_SOURCE_DIR}/graphics/shaders ${CMAKE_CURRENT_BINARY_DIR}/../shaders
   COMMENT "Copying shaders" VERBATIM
+  )
+
+# Copy assets
+ADD_CUSTOM_COMMAND(
+  TARGET cannon POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E create_symlink
+    ${CMAKE_CURRENT_SOURCE_DIR}/graphics/assets ${CMAKE_CURRENT_BINARY_DIR}/../assets
+  COMMENT "Copying assets" VERBATIM
   )
