--- a/cannon/graphics/CMakeLists.txt
+++ b/cannon/graphics/CMakeLists.txt
@@ -2,11 +2,13 @@ list(APPEND GRAPHICS_SOURCES
   window.cpp
   vertex_buffer.cpp
   vertex_color_buffer.cpp
+  vertex_color_tex_buffer.cpp
   element_buffer.cpp
   vertex_shader.cpp
   fragment_shader.cpp
   shader_program.cpp
   vertex_array_object.cpp
+  texture.cpp
   )
 
 add_library(graphics ${GRAPHICS_SOURCES})
