Implemented DIMACS format parsing for reading CNF formulas

--- a/cannon/logic/CMakeLists.txt
+++ b/cannon/logic/CMakeLists.txt
@@ -6,3 +6,11 @@ list(APPEND LOGIC_SOURCES
 
 add_library(logic ${LOGIC_SOURCES})
 target_link_libraries(logic ${LIBRARIES})
+
+# Copy CNF formulas
+ADD_CUSTOM_COMMAND(
+  TARGET logic POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E create_symlink
+    ${CMAKE_CURRENT_SOURCE_DIR}/formulas ${CMAKE_CURRENT_BINARY_DIR}/../../formulas
+  COMMENT "Copying formulas" VERBATIM
+  )
