Implemented affine controller

--- a/cannon/CMakeLists.txt
+++ b/cannon/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(logic)
 add_subdirectory(graphics)
 add_subdirectory(plot)
 add_subdirectory(ml)
+add_subdirectory(control)
 
 add_library(cannon ${CANNON_SOURCES})
 target_link_libraries(cannon 
@@ -17,5 +18,6 @@ target_link_libraries(cannon
   graphics
   plot
   ml
+  control
   ${LIBRARIES})
 
