--- a/cannon/CMakeLists.txt
+++ b/cannon/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(plot)
 add_subdirectory(ml)
 add_subdirectory(control)
 add_subdirectory(physics)
+add_subdirectory(geom)
 
 add_library(cannon ${CANNON_SOURCES})
 target_link_libraries(cannon 
@@ -21,5 +22,6 @@ target_link_libraries(cannon
   ml
   control
   physics
+  geom
   ${LIBRARIES})
 
