--- a/cannon/math/CMakeLists.txt
+++ b/cannon/math/CMakeLists.txt
@@ -1,6 +1,7 @@
 list(APPEND MATH_SOURCES
   finite_diff_derivative.cpp
   barycentric_coords.cpp
+  multivariate_normal.cpp
   )
 
 add_library(math ${MATH_SOURCES})
