--- a/cannon/control/CMakeLists.txt
+++ b/cannon/control/CMakeLists.txt
@@ -2,5 +2,4 @@ list(APPEND CONTROL_SOURCES
   affine_controller.cpp
   )
 
-add_library(control ${CONTROL_SOURCES})
-target_link_libraries(control log ml)
+add_library(control OBJECT ${CONTROL_SOURCES})
