--- a/cannon/geom/CMakeLists.txt
+++ b/cannon/geom/CMakeLists.txt
@@ -3,5 +3,4 @@ list(APPEND GEOM_SOURCES
   kd_tree_indexed.cpp
   )
 
-add_library(geom ${GEOM_SOURCES})
-target_link_libraries(geom log)
+add_library(geom OBJECT ${GEOM_SOURCES})
