--- a/cannon/physics/CMakeLists.txt
+++ b/cannon/physics/CMakeLists.txt
@@ -2,5 +2,4 @@ list(APPEND PHYSICS_SOURCES
   euler_integrator.cpp
   )
 
-add_library(physics ${PHYSICS_SOURCES})
-target_link_libraries(physics log)
+add_library(physics OBJECT ${PHYSICS_SOURCES})
