--- a/cannon/logic/CMakeLists.txt
+++ b/cannon/logic/CMakeLists.txt
@@ -5,13 +5,5 @@ list(APPEND LOGIC_SOURCES
   dpll.cpp
   )
 
-add_library(logic ${LOGIC_SOURCES})
-target_link_libraries(logic)
+add_library(logic OBJECT ${LOGIC_SOURCES})
 
-# Copy CNF formulas
-ADD_CUSTOM_COMMAND(
-  TARGET logic POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E create_symlink
-    ${CMAKE_CURRENT_SOURCE_DIR}/formulas ${CMAKE_CURRENT_BINARY_DIR}/../../formulas
-  COMMENT "Copying formulas" VERBATIM
-  )
