--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ ENABLE_TESTING()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # Produce code coverage target
 if(CMAKE_COMPILER_IS_GNUCXX)
