--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "thirdparty/imgui"]
 	path = thirdparty/imgui
-	url = https://github.com/ocornut/imgui.git
+	url = https://github.com/cannontwo/imgui.git
 [submodule "thirdparty/implot"]
 	path = thirdparty/implot
-	url = https://github.com/epezent/implot.git
+	url = https://github.com/cannontwo/implot.git
