--- a/cannon/graphics/CMakeLists.txt
+++ b/cannon/graphics/CMakeLists.txt
@@ -22,6 +22,7 @@ list(APPEND GRAPHICS_SOURCES
   framebuffer.cpp
   cubemap.cpp
   geometry/skybox.cpp
+  geometry/screen_quad.cpp
   )
 
 add_library(graphics OBJECT ${GRAPHICS_SOURCES})
