Added approval testing and initial approval tests for graphics stuff

--- a/cannon/graphics/CMakeLists.txt
+++ b/cannon/graphics/CMakeLists.txt
@@ -28,6 +28,7 @@ list(APPEND GRAPHICS_SOURCES
   deferred_renderer.cpp
   opengl_state.cpp
   render_pass.cpp
+  opengl_writer.cpp
   )
 
 add_library(graphics OBJECT ${GRAPHICS_SOURCES})
